# clipbg

./: README.md  pyproject.toml
clipbg/: clipbg.inx  clipbg.py
